[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "dev-template"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy[all]==0.21.18",
    "open-aea-ci-helpers==2.2.1",
    "open-aea-helpers==0.21.18",
    "pytest-custom_exit_code==0.3.0",
    "setuptools<=81.0.0",
    "toml==0.10.2",
]

[project.urls]
Repository = "https://github.com/valory-xyz/dev-template"

[dependency-groups]
dev = ["tomte[liccheck, cli]==0.6.5", "tox-uv"]

[tool.uv]
default-groups = "all"
prerelease = "allow"
# Keep httpx on the 0.x series: safety 3.7.0 (pulled via tomte[safety])
# imports httpx.NetworkError, which was removed in httpx 1.x. Without
# this constraint, UV_PRERELEASE=allow lets uv resolve to httpx 1.0.devN.
constraint-dependencies = ["httpx<1"]

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
